# dictk

./: .gitignore  404.html  CONTRIBUTING.md  README.md  contributing.html  index.html  introduction.html  print.html  pyproject.toml  searcher-09f2665d.js  searchindex-494b8ca9.js  searchindex-d37c401d.js  searchindex.js  toc-50914075.js  toc-7275294e.js  toc.html  toc.js
.github/scripts/: render_dashboard.py  render_pylint_report.py
.github/workflows/: ci.yml
api/: dictk.html  index.html  search.js
api/dictk/: cli.html  core.html  imaging.html  rosta.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_3dcafba1249d5205___init___py.html  z_3dcafba1249d5205_cli_py.html  z_3dcafba1249d5205_core_py.html  z_3dcafba1249d5205_imaging_py.html  z_3dcafba1249d5205_rosta_py.html
dashboard/: index.html
docs/userguide/: book.toml
docs/userguide/src/: SUMMARY.md  introduction.md
docs/userguide/src/getting_started/: image_generation.md  preprocessing.md  transformation.md
getting_started/: image_generation.html  preprocessing.html  transformation.html
reports/lint/: index.html
src/dictk/: __init__.py  cli.py  core.py  imaging.py  rosta.py
tests/: test_cli.py  test_core.py  test_imaging.py  test_rosta.py
