[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dictk"
dynamic = ["version"]
description = "Digital Image Correlation Toolkit"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Chad Hovey" },
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "imageio[tifffile]",
]

[project.urls]
Homepage = "https://github.com/hovey/dictk"
Repository = "https://github.com/hovey/dictk"

[project.scripts]
dictk = "dictk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pdoc",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/dictk"]
